# hackathon-1

./: .dockerignore  .gitignore  GEMINI.md  README.md
.gemini/: checklist_status.md  clarification_questions.md  docusaurus_status.md  feature_description.txt
.specify/memory/: constitution.md
.specify/scripts/powershell/: create-new-feature-debug.ps1
book_frontend/: README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
book_frontend/.docusaurus/: client-modules.js  docusaurus.config.mjs  globalData.json  registry.js  routes.js  routesChunkNames.json
book_frontend/docs/: chapter1.md  chapter2.md  chapter3.md  personalization.md  rag-integration.md
book_frontend/docs/module1/: _category_.json  chapter1.md  chapter2.md  chapter3.md  intro.md
book_frontend/docs/module2/: chapter1.md  chapter2.md  chapter3.md  intro.md
book_frontend/docs/module3/: chapter1.md  chapter2.md  chapter3.md  intro.md
book_frontend/docs/module4/: chapter1.md  chapter2.md  chapter3.md  intro.md
history/: project_history_rag_backend_fix.md
rag_backend/: README.md  SETUP.md  ingest.py  pyproject.toml
rag_backend/src/api/: main.py
rag_backend/src/models/: api_models.py
rag_backend/src/services/: content_loader.py  embedding_service.py  text_splitter.py  vector_store.py
ros2_examples/: package.xml  setup.py
ros2_examples/launch/: example.launch.py
ros2_examples/ros2_examples/: publisher_node.py  subscriber_node.py
specs/001-ros2-robot-control/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+23 files in other folders)
